Fixes overflow and z-index issues on home page

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,9 +1,20 @@
 @import 'colors';
 
+html {
+	width: 100%;
+	height: 100%;
+}
+
 body {
+	height: 100%;
+	width: 100%;
+	font-family: 'Abel', sans-serif;
 	background: black;
 	background-repeat: no-repeat;
 	margin: 0;
+}
+
+.waves-container {
 	overflow-x: hidden;
 }
 
@@ -11,18 +22,8 @@ body {
 	font-family: 'Abel', sans-serif;
 }
 
-h1, h2 {
-	font-family: 'Oswald', sans-serif;
-}
-
 p {
 	font-size: 20px;
-}
-
-
-body {
-	height: 100%;
-	font-family: 'Abel', sans-serif;
 }
 
 .text-center {
@@ -342,13 +343,13 @@ h1, h2, h3, h4, h5 {
 }
 
 .info-section {
-	z-index: 100;
 	position: relative;
 	background: linear-gradient(black, $black);
 	text-align:  left;
 	color: white;
 	padding-bottom: 40px;
 	padding-top: 50px;
+	overflow: hidden;
 }
 
 .info-section a {
